# docs/swagger.json
@@ -16,6 +16,84 @@
     },
     "basePath": "/",
     "paths": {
+        "/buildings": {
+            "get": {
+                "description": "List Bookmarks from user",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "ListBookmarks",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/model.Building"
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/buildings/{id}/{period}": {
+            "get": {
+                "description": "List Bookmarks from user",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "ListBookmarks",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Building ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Start date YYYY-MM-DD",
+                        "name": "start",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "End date YYYY-MM-DD",
+                        "name": "end",
+                        "in": "query"
+                    },
+                    {
+                        "enum": [
+                            "hourly",
+                            "daily"
+                        ],
+                        "type": "string",
+                        "description": "Data aggeration period",
+                        "name": "period",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/model.BuildingData"
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/login": {
             "post": {
                 "description": "Login a user",
@@ -65,33 +143,108 @@
                     }
                 }
             }
+        },
+        "/user/bookmarks": {
+            "get": {
+                "description": "List Bookmarks from user",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "ListBookmarks",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/model.Bookmark"
+                        }
+                    }
+                }
+            },
+            "post": {
+                "description": "Add a bookmar to a user",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Add Bookmark",
+                "parameters": [
+                    {
+                        "description": "user signup",
+                        "name": "user",
+                        "in": "body",
+                        "schema": {
+                            "$ref": "#/definitions/model.addBookmark"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/model.Bookmark"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
-        "model.Site": {
+        "model.Bookmark": {
             "type": "object",
             "properties": {
+                "buildingId": {
+                    "type": "string"
+                },
                 "createdAt": {
-                    "description": "User       User",
                     "type": "string"
                 },
                 "id": {
                     "type": "integer"
                 },
-                "locationId": {
-                    "type": "string"
-                },
                 "updatedAt": {
                     "type": "string"
+                },
+                "user": {
+                    "$ref": "#/definitions/model.User"
                 },
                 "userID": {
                     "type": "integer"
                 }
             }
         },
+        "model.Building": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
+        "model.BuildingData": {
+            "type": "object",
+            "properties": {
+                "timestamp": {
+                    "type": "string"
+                }
+            }
+        },
         "model.User": {
             "type": "object",
             "properties": {
+                "bookmarks": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/model.Bookmark"
+                    }
+                },
                 "createdAt": {
                     "type": "string"
                 },
@@ -100,12 +253,6 @@
                 },
                 "password": {
                     "type": "string"
-                },
-                "sites": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/model.Site"
-                    }
                 },
                 "token": {
                     "type": "string"
@@ -122,6 +269,14 @@
                     "type": "string"
                 },
                 "password": {
+                    "type": "string"
+                }
+            }
+        },
+        "model.addBookmark": {
+            "type": "object",
+            "properties": {
+                "buildingId": {
                     "type": "string"
                 }
             }
