# model/bookmark.go
@@ -1,0 +1,16 @@
+package model
+
+import "time"
+
+type Bookmark struct {
+	ID         uint `xorm:"pk autoincr"`
+	BuildingId string
+	UserID     uint `xorm:"user_id"`
+	User       User
+	CreatedAt  time.Time `xorm:"updated"`
+	UpdatedAt  time.Time `xorm:"created"`
+}
+
+type addBookmark struct {
+	BuildingId string
+}
