# model/building.go
@@ -1,0 +1,11 @@
+package model
+
+type Building struct {
+	ID   string
+	Name string
+}
+
+type BuildingData struct {
+	Timestamp string
+	Value     float64
+}
