# model/user.go
@@ -9,12 +9,18 @@ type UserSignup struct {
 	Password string
 }
 
+type LoginUser struct {
+	ID    uint
+	Email string
+	Token string
+}
+
 type User struct {
 	ID        uint   `swaggerignore:"true" xorm:"autoincr pk"`
 	Email     string `xorm:"unique"`
 	Password  string
-	Token     string
-	Sites     []Site
-	CreatedAt time.Time
-	UpdatedAt time.Time
+	Token     string `xorm:"-"`
+	Bookmarks []Bookmark
+	CreatedAt time.Time `xorm:"created"`
+	UpdatedAt time.Time `xorm:"updated"`
 }
